# trade-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agent-memory/discord-data-pipeline/: flow-counts-tracker.csv  flow-patterns.md
.claude/agent-memory/discord-data-pipeline/references/: daily-update-2026-02-05.html
.claude/agent-memory/sector-rotation/: sector_correlation_sp500_daily.csv  sector_returns_sp500_weekly.csv
.claude/agents/: discord-data-pipeline.md
.claude/skills/daily-workflow/: SKILL.md
.claude/skills/equity-research/: SKILL.md
.claude/skills/equity-research/scripts/: run_equity_research.py
.claude/skills/knowledge-base/: SKILL.md
.claude/skills/market-events-tracker/: SKILL.md
.claude/skills/minervini-screener/: Rotation_prompt  SKILL.md
.claude/skills/minervini-screener/references/: minervini_reference.md
.claude/skills/minervini-screener/scripts/: __init__.py  (+2 more)
.claude/skills/sec-filing-analysis/: SKILL.md
app/: main.py
app/agents/coordinator/: graph.py
app/agents/flow_analyst/: agent.py
app/agents/news_analyst/: agent.py
app/agents/opex_analyst/: agent.py
app/core/: __init__.py  auth.py  client.py  database.py  error_handling.py  ollama_client.py  polygon_client.py
app/routers/: analysis.py  dashboard.py  get_routers.py  health.py  market.py  websocket.py
app/schema/: models.py  state.py
app/services/: deep_itm.py  flow_parser.py  flow_parser_v0.py  flow_scorer.py  generate_portfolio_report.py  opex_calendar.py  portfolio-optimizer-hrp.py  premium_calculator.py  watchlist.py
app/services/visualizations/: optimal_portfolio_weights.csv
app/tools/: agent_tools.py
app/workers/: daily_pipeline.py  report_generator.py
config/: settings.py
data/: discord-export-optimized.sh  fmt.sh  fundamentals.csv  screener.ipynb  sector_correlation_sp500_weekly.csv  sector_returns_sp500_10yr.csv  sector_returns_sp500_daily.csv
data/equity-research/: amd.html  crwv.html  fslr.html  intc.html  lly.html  mu-1.html  mu.html  nbis.html  now.html  sndk.html
data/extract/: ai-scalpers.py  breakouts.py  bullseye.py  callouts.py  golden-sweeps-uw.py  golden-sweeps.py  sexy-flow.py  sweeps.py  trady-flow.py  walter.py
data/flow/: golden-sweeps.csv  sexy-flow.csv  sweeps.csv  trady-flow.csv  walter.csv  walter_openai.csv
docs/: dashboard-architecture.md
scripts/: flow_aggregator.py  pg_refresh.sh  proofread_report.py  run_analysis.py  save_research.py  sector-analysis.py  update_technicals.py  walter_enrich.py
scripts/equity_research/: news_fetcher.py  report_builder.py
tests/: test_services.py
(+11 files in other folders)
